--- a/top.html
+++ b/top.html
@@ -1,4 +1,3 @@
 <h1>Hi! I'm ふじえもん </h1>
 
-<link href="https://blowwords.fujieshota.repl.co/">
-<li>Blow Words</li>
+<a href="https://blowwords.fujieshota.repl.co/">Blow Words</a>
