--- a/top.html
+++ b/top.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html lang = "en-US" >
+<html lang = "ja" >
   <head>
     <meta charset = "utf-8" />
     <meta name = "author" content = "fujiemon" />
+    <meta name = "viewport" content = "width=device-width"/>
     <meta name ="description" content = "This site provides information about fujiemon, product. " />
     <tytle>ふじえもん</tytle>
   </head>
   <body>
     
     <h1>Hi! I'm ふじえもん </h1>
-    <a href = ""><img src = "fujiemon.png" alt = "アイコン"/></a>
+    <img src = "./fujiemon.png" alt = "アイコン画像"/>
     <p>
       ふじえもんです．ここでは，制作物や公開資料，ブログなどの情報をまとめています．
     </p>
