add url of images

--- a/top.html
+++ b/top.html
@@ -5,12 +5,13 @@
     <meta name = "author" content = "fujiemon" />
     <meta name = "viewport" content = "width=device-width"/>
     <meta name ="description" content = "This site provides information about fujiemon, product. " />
+    <link rel = "shortcut icon" href = "image/fujiemon-32.ico">
     <tytle>ふじえもん</tytle>
   </head>
   <body>
     
     <h1>Hi! I'm ふじえもん </h1>
-    <img src = "./fujiemon.png" alt = "アイコン画像"/>
+    <img src = "image/fujiemon.png" alt = "アイコン画像"/>
     <p>
       ふじえもんです．ここでは，制作物や公開資料，ブログなどの情報をまとめています．
     </p>
