change favicon url

--- a/top.html
+++ b/top.html
@@ -5,8 +5,9 @@
     <meta name = "author" content = "fujiemon" />
     <meta name = "viewport" content = "width=device-width"/>
     <meta name ="description" content = "This site provides information about fujiemon, product. " />
-    <link rel = "shortcut icon" href = "image/fujiemon-32.ico">
     <tytle>ふじえもん</tytle>
+    <link rel = "shortcut icon" href = "image/fujiemon-32.ico"/>
+    
   </head>
   <body>
     
