change favicon url

--- a/top.html
+++ b/top.html
@@ -6,7 +6,7 @@
     <meta name = "viewport" content = "width=device-width"/>
     <meta name ="description" content = "This site provides information about fujiemon, product. " />
     <tytle>ふじえもん</tytle>
-    <link rel = "shortcut icon" href = "image/fujiemon-32.ico"/>
+    <link rel = "shortcut icon" href = "image/fujiemon-32.ico">
     
   </head>
   <body>
