--- a/top.html
+++ b/top.html
@@ -5,8 +5,8 @@
     <meta name = "author" content = "fujiemon" />
     <meta name = "viewport" content = "width=device-width"/>
     <meta name ="description" content = "This site provides information about fujiemon, product. " />
-    <tytle>ふじえもん</tytle>
-    <link rel = "shortcut icon" href = "image/fujiemon-32.ico">
+    <tytle> fujiemon </tytle>
+    <link rel = "icon" type = "image/x-icon" href = "image/fujiemon-32.ico">
     
   </head>
   <body>
