--- a/top.html
+++ b/top.html
@@ -2,17 +2,18 @@
 <html lang = "ja" >
   <head>
     <meta charset = "utf-8" />
+    <tytle> fujiemon </tytle>
+    <link rel = "icon" type = "image/x-icon" href = "image/favicon-32.ico">
     <meta name = "author" content = "fujiemon" />
     <meta name = "viewport" content = "width=device-width"/>
     <meta name ="description" content = "This site provides information about fujiemon, product. " />
-    <tytle> fujiemon </tytle>
-    <link rel = "icon" type = "image/x-icon" href = "image/fujiemon-32.ico">
     
   </head>
   <body>
     
-    <h1>Hi! I'm ふじえもん </h1>
-    <img src = "image/fujiemon.png" alt = "アイコン画像"/>
+    <h1>Hi! I'm ふじえもん 
+      <img src = "image/fujiemon.png" alt = "アイコン画像"/>
+    </h1>
     <p>
       ふじえもんです．ここでは，制作物や公開資料，ブログなどの情報をまとめています．
     </p>
