--- a/top.html
+++ b/top.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset = "utf-8" />
     <tytle> fujiemon </tytle>
-    <link rel = "icon" type = "image/x-icon" href = "image/favicon-32.ico">
+    <link rel = "icon" type = "image/x-icon" href = "./favicon-32.ico">
     <meta name = "author" content = "fujiemon" />
     <meta name = "viewport" content = "width=device-width"/>
     <meta name ="description" content = "This site provides information about fujiemon, product. " />
