--- a/top.html
+++ b/top.html
@@ -11,9 +11,8 @@
   </head>
   <body>
     
-    <h1>Hi! I'm ふじえもん 
-      <img src = "image/fujiemon.png" alt = "アイコン画像"/>
-    </h1>
+    <h1>Hi! I'm ふじえもん </h1>
+    <img src = "image/fujiemon.png" alt = "アイコン画像"/>
     <p>
       ふじえもんです．ここでは，制作物や公開資料，ブログなどの情報をまとめています．
     </p>
@@ -21,7 +20,7 @@
       <ul>
         <li><a href = "https://blowwords.fujieshota.repl.co/">Blow Words</a></li>
         <li>Visible Speech</li>
-        <li></li>
+        <li>Coming soon..</li>
       </ul>
       
     <h2>Slides </h2>
