--- a/top.html
+++ b/top.html
@@ -2,7 +2,7 @@
 <html lang = "ja" >
   <head>
     <meta charset = "utf-8" />
-    <tytle> fujiemon </tytle>
+    <title> fujiemon </title>
     <link rel = "icon" type = "image/x-icon" href = "./favicon-32.ico">
     <meta name = "author" content = "fujiemon" />
     <meta name = "viewport" content = "width=device-width"/>
