add sildes and so on.

--- a/slides.html
+++ b/slides.html
@@ -29,17 +29,19 @@
       <h1>ふじえもん
       <img src="image/fujiemon-white.png" alt="プロフィールアイコン" class="icon">
       </h1>
-      <p>骨を通して補聴している学生エンジニア．音に関するプロダクト開発や研究をしています．UN-FROZEN,デフエンジニアの会に所属しています．</p>
+      <p>骨伝導で補聴している学生エンジニア．音に関するプロダクト開発や研究をしています．UN-FROZEN, デフエンジニアの会に所属しています．</p>
+      <br>
+      <p>骨伝導, チーム開発におけるコミュニケーション, 聴覚障害に関する情報保障に興味があります．</p>
       <nav>
         <ul>
-          <a href="index.html">ホーム</a>
-          <a href="index.html#section1">ポートフォリオ</a>
-          <a href="slides.html">登壇資料</a>
+          <li><a href="index.html">ホーム</a></li>
+          <li><a href="index.html#section1">ポートフォリオ</a></li>
+          <li><a href="slides.html">登壇資料</a></li>
+          <li><a href="hobbies.html">趣味</a></li>
         </ul>
       </nav>
     </div>
-  </header>
-  
+  </header>  
   <main>
     <div id="slides">
       <h1>登壇資料</h1>
@@ -53,7 +55,16 @@
         <h2>スクフェス福岡</h2>
           <h3>スクフェス福岡にてオンラインで登壇しました．</h3>
           <a href ="https://speakerdeck.com/fujiemon/ting-koeniyi-razu-waiwaifa-yan-situtugasigasikai-fa-suru-tamenibi-yao-nakoto-sukuhuesufu-gang">聴こえに依らずワイワイ発言しつつガシガシ開発するために必要なこと-スクフェス福岡</a><iframe class="speakerdeck-iframe" frameborder="0" src="https://speakerdeck.com/player/ab7d73836cfc41bc8cf384963a265b0d" title="聴こえに依らず_ワイワイ発言しつつガシガシ開発する_ために必要なこと-スクフェス福岡.pdf" allowfullscreen="true" style="border: 0px; background: padding-box padding-box rgba(0, 0, 0, 0.1); margin: 0px; padding: 0px; border-radius: 6px; box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 40px; width: 100%; height: auto; aspect-ratio: 560 / 315;" data-ratio="1.7777777777777777"></iframe>
-      <h2>ほか</h2>
+      <h2>UN-FROZEN LT会-03</h2>
+      <h3>C++はじめたよ</h3>
+      <div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
+ padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+ border-radius: 8px; will-change: transform;">
+  <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFwTsZPaNs&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+  </iframe>
+</div>
+<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFwTsZPaNs&#x2F;view?utm_content=DAFwTsZPaNs&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener"></a>
  
     </div>
   </main>
@@ -62,12 +73,12 @@
     <div id="footer-nav">
       <p>連絡先: <a href="mailto:fujieng1nee7@gmail.com">fujieng1nee7[a]gmail.com </a><br>[a]は@と読み替えてください．</p>
     <div class="social-icons">
-      <a href="https://twitter.com/fujiengineer"><img src="image/x-logo-white.png" alt="Xのアイコン" class="icon"></a>
+      <a href="https://twitter.com/fujiengineer"><img src="image/x-logo-white.png" alt="Xのアイコンで，ふじえもんのXプロフィールへのリンクです．" class="icon"></a>
    
-      <a href="https://note.com/fujiemon_tad/" target="_blank"><img src = "image/note-square.png" alt = "Noteのアイコン" class = "icon" ></a>
-      <a href="https://qiita.com/fujiemon" target="_blank"><img src = "image/qiita-favicon.png" alt = "Qiitaのアイコン" class = "icon" ></a>
-      <a href="https://zenn.dev/fujiengineer" target="_blank"><img src = "image/zenn.svg" alt = "Zennのアイコン" class = "icon" ></a>
-      <a href="https://github.com/shotafujie" target="_blank"><i class="fab fa-github" alt = "Githubのアイコン"></i></a>
+      <a href="https://note.com/fujiemon_tad/" target="_blank"><img src = "image/note-square.png" alt = "Noteのアイコンで，ふじえもんのNoteプロフィールへのリンクです．" class = "icon" ></a>
+      <a href="https://qiita.com/fujiemon" target="_blank"><img src = "image/qiita-favicon.png" alt = "Qiitaのアイコンで，ふじえもんのQiitaプロフィールへのリンクです．" class = "icon" ></a>
+      <a href="https://zenn.dev/fujiengineer" target="_blank"><img src = "image/zenn.svg" alt = "Zennのアイコンで，ふじえもんのZennプロフィールへのリンクです．" class = "icon" ></a>
+      <a href="https://github.com/shotafujie" target="_blank" aria-label="Githubのアイコンで，ふじえもんのGithubプロフィールへのリンクです．"<i class="fab fa-github icon"></i></a>
     </div>
     </div>
   </footer>
