--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- SNSシェア用のメタデータ -->
   <meta property="og:title" content="ふじえもんのおへや">
   <meta property="og:description" content="ふじえもんのポートフォリオサイトです．成果物や登壇資料を掲載しています．">
-  <meta property="og:image" content="https://raw.githubusercontent.com/shotafujie/fujiemon/main/bgfujiemon.png">
+  <meta property="og:image" content="https://github.com/shotafujie/fujiemon/blob//bgfujiemon.png">
   <meta property="og:url" content="https://fujiemon.fujieshota.repl.co/"> <!--後ほどカスタムドメイン取得予定-->
    <meta property=”og:type” content=”website” />
    <meta property=”og:site_name” content=”ふじえもんのおへや” />
