--- a/hobbies.html
+++ b/hobbies.html
@@ -24,6 +24,7 @@
 </head>
 
 <body>
+  <div id="main-container">
   <header>
     <div id="top-nav">
       <h1>ふじえもん
@@ -45,15 +46,18 @@
   <main>
     <div id="hobbies">
       <h1>趣味</h1>
-      <li>読書
-        <p>技術書は勿論，数学やサイバー犯罪を扱った小説をよく読みます．
-        </p>
-      </li>
-      <li>日本酒
-        <p>
-          田酒，
-        </p>
-      </li>
+
+      <ul>
+        <li>読書
+          <p>技術書は勿論，数学やサイバー犯罪を扱った小説をよく読みます．
+          </p>
+        </li>
+        <li>日本酒
+          <p>田酒，
+          </p>
+        </li>
+      </ul>
+
       
     </div>
   </main>
@@ -71,5 +75,6 @@
     </div>
     </div>
   </footer>
+  </div>
 </body>
 </html>
