--- a/slides.html
+++ b/slides.html
@@ -24,6 +24,7 @@
 </head>
 
 <body>
+  <div id="main-container">
   <header>
     <div id="top-nav">
       <h1>ふじえもん
@@ -42,6 +43,7 @@
       </nav>
     </div>
   </header>  
+
   <main>
     <div id="slides">
       <h1>登壇資料</h1>
@@ -82,5 +84,6 @@
     </div>
     </div>
   </footer>
+  </div>
 </body>
 </html>
