check footer of slides,hobby.

--- a/slides.html
+++ b/slides.html
@@ -25,65 +25,62 @@
 
 <body>
   <div id="main-container">
-  <header>
-    <div id="top-nav">
-      <h1>ふじえもん
-      <img src="image/fujiemon-white.png" alt="プロフィールアイコン" class="icon">
-      </h1>
-      <p>骨伝導で補聴している学生エンジニア．音に関するプロダクト開発や研究をしています．UN-FROZEN, デフエンジニアの会に所属しています．</p>
-      <br>
-      <p>骨伝導, チーム開発におけるコミュニケーション, 聴覚障害に関する情報保障に興味があります．</p>
-      <nav>
-        <ul>
-          <li><a href="index.html">ホーム</a></li>
-          <li><a href="index.html#section1">ポートフォリオ</a></li>
-          <li><a href="slides.html">登壇資料</a></li>
-          <li><a href="hobbies.html">趣味</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>  
-
-  <main>
-    <div id="slides">
-      <h1>登壇資料</h1>
-        <h2>RSGT2023</h2>
-          <h3>大学での講義(AgileMiniCamp)の中で行ったチームでのコミュニケーションの工夫について話しました．</h3>
-          <a href = "https://confengine.com/conferences/regional-scrum-gathering-tokyo-2023/proposal/17568">RSGT2023のProposal-聴覚障害のある大学生チームによる臆さない発言環境の形成</a>
-          <br>
-          <a href = "https://speakerdeck.com/hayato_ukuk/zi-mu-ting-jue-zhang-hai-noaruda-xue-sheng-timuniyoruyi-sanaifa-yan-huan-jing-noxing-cheng">RSGT2023 聴覚障害のある大学生チームによる臆さない発言環境の形成  スライド-字幕付き</a><iframe class="speakerdeck-iframe" frameborder="0" src="https://speakerdeck.com/player/1556ba2a59ca4399969837a550d0f3b2" title="字幕_聴覚障害のある大学生チームによる臆さない発言環境の形成" allowfullscreen="true" style="border: 0px; background: padding-box padding-box rgba(0, 0, 0, 0.1); margin: 0px; padding: 0px; border-radius: 6px; box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 40px; width: 100%; height: auto; aspect-ratio: 560 / 314;" data-ratio="1.78343949044586"></iframe>
-          <br>
-          <a href = "https://speakerdeck.com/hayato_ukuk/ting-jue-zhang-hai-noaruda-xue-sheng-timuniyoruyi-sanaifa-yan-huan-jing-noxing-cheng">RSGT2023 聴覚障害のある大学生チームによる臆さない発言環境の形成  スライド</a><iframe class="speakerdeck-iframe" frameborder="0" src="https://speakerdeck.com/player/b823a53c983747b6ad90d237d1465aef" title="聴覚障害のある大学生チームによる臆さない発言環境の形成" allowfullscreen="true" style="border: 0px; background: padding-box padding-box rgba(0, 0, 0, 0.1); margin: 0px; padding: 0px; border-radius: 6px; box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 40px; width: 100%; height: auto; aspect-ratio: 560 / 314;" data-ratio="1.78343949044586"></iframe>
-        <h2>スクフェス福岡</h2>
-          <h3>スクフェス福岡にてオンラインで登壇しました．</h3>
-          <a href ="https://speakerdeck.com/fujiemon/ting-koeniyi-razu-waiwaifa-yan-situtugasigasikai-fa-suru-tamenibi-yao-nakoto-sukuhuesufu-gang">聴こえに依らずワイワイ発言しつつガシガシ開発するために必要なこと-スクフェス福岡</a><iframe class="speakerdeck-iframe" frameborder="0" src="https://speakerdeck.com/player/ab7d73836cfc41bc8cf384963a265b0d" title="聴こえに依らず_ワイワイ発言しつつガシガシ開発する_ために必要なこと-スクフェス福岡.pdf" allowfullscreen="true" style="border: 0px; background: padding-box padding-box rgba(0, 0, 0, 0.1); margin: 0px; padding: 0px; border-radius: 6px; box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 40px; width: 100%; height: auto; aspect-ratio: 560 / 315;" data-ratio="1.7777777777777777"></iframe>
-      <h2>UN-FROZEN LT会-03</h2>
-      <h3>C++はじめたよ</h3>
-      <div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
- padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
- border-radius: 8px; will-change: transform;">
-  <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
-    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFwTsZPaNs&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
-  </iframe>
-</div>
-<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFwTsZPaNs&#x2F;view?utm_content=DAFwTsZPaNs&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener"></a>
- 
-    </div>
-  </main>
-
-  <footer>
-    <div id="footer-nav">
-      <p>連絡先: <a href="mailto:fujieng1nee7@gmail.com">fujieng1nee7[a]gmail.com </a><br>[a]は@と読み替えてください．</p>
-    <div class="social-icons">
-      <a href="https://twitter.com/fujiengineer"><img src="image/x-logo-white.png" alt="Xのアイコンで，ふじえもんのXプロフィールへのリンクです．" class="icon"></a>
+    <header>
+      <div id="top-nav">
+        <h1>ふじえもん
+        <img src="image/fujiemon-white.png" alt="プロフィールアイコン" class="icon">
+        </h1>
+        <p>骨伝導で補聴している学生エンジニア．音に関するプロダクト開発や研究をしています．UN-FROZEN, デフエンジニアの会に所属しています．</p>
+        <br>
+        <p>骨伝導, チーム開発におけるコミュニケーション, 聴覚障害に関する情報保障に興味があります．</p>
+        <nav>
+          <ul>
+            <li><a href="index.html">ホーム</a></li>
+            <li><a href="index.html#section1">ポートフォリオ</a></li>
+            <li><a href="slides.html">登壇資料</a></li>
+            <li><a href="hobbies.html">趣味</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>  
+    <main>
+      <div id="slides">
+        <h1>登壇資料</h1>
+          <h2>RSGT2023</h2>
+            <h3>大学での講義(AgileMiniCamp)の中で行ったチームでのコミュニケーションの工夫について話しました．</h3>
+            <a href = "https://confengine.com/conferences/regional-scrum-gathering-tokyo-2023/proposal/17568">RSGT2023のProposal-聴覚障害のある大学生チームによる臆さない発言環境の形成</a>
+            <br>
+            <a href = "https://speakerdeck.com/hayato_ukuk/zi-mu-ting-jue-zhang-hai-noaruda-xue-sheng-timuniyoruyi-sanaifa-yan-huan-jing-noxing-cheng">RSGT2023 聴覚障害のある大学生チームによる臆さない発言環境の形成  スライド-字幕付き</a><iframe class="speakerdeck-iframe" frameborder="0" src="https://speakerdeck.com/player/1556ba2a59ca4399969837a550d0f3b2" title="字幕_聴覚障害のある大学生チームによる臆さない発言環境の形成" allowfullscreen="true" style="border: 0px; background: padding-box padding-box rgba(0, 0, 0, 0.1); margin: 0px; padding: 0px; border-radius: 6px; box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 40px; width: 100%; height: auto; aspect-ratio: 560 / 314;" data-ratio="1.78343949044586"></iframe>
+            <br>
+            <a href = "https://speakerdeck.com/hayato_ukuk/ting-jue-zhang-hai-noaruda-xue-sheng-timuniyoruyi-sanaifa-yan-huan-jing-noxing-cheng">RSGT2023 聴覚障害のある大学生チームによる臆さない発言環境の形成  スライド</a><iframe class="speakerdeck-iframe" frameborder="0" src="https://speakerdeck.com/player/b823a53c983747b6ad90d237d1465aef" title="聴覚障害のある大学生チームによる臆さない発言環境の形成" allowfullscreen="true" style="border: 0px; background: padding-box padding-box rgba(0, 0, 0, 0.1); margin: 0px; padding: 0px; border-radius: 6px; box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 40px; width: 100%; height: auto; aspect-ratio: 560 / 314;" data-ratio="1.78343949044586"></iframe>
+          <h2>スクフェス福岡</h2>
+            <h3>スクフェス福岡にてオンラインで登壇しました．</h3>
+            <a href ="https://speakerdeck.com/fujiemon/ting-koeniyi-razu-waiwaifa-yan-situtugasigasikai-fa-suru-tamenibi-yao-nakoto-sukuhuesufu-gang">聴こえに依らずワイワイ発言しつつガシガシ開発するために必要なこと-スクフェス福岡</a><iframe class="speakerdeck-iframe" frameborder="0" src="https://speakerdeck.com/player/ab7d73836cfc41bc8cf384963a265b0d" title="聴こえに依らず_ワイワイ発言しつつガシガシ開発する_ために必要なこと-スクフェス福岡.pdf" allowfullscreen="true" style="border: 0px; background: padding-box padding-box rgba(0, 0, 0, 0.1); margin: 0px; padding: 0px; border-radius: 6px; box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 40px; width: 100%; height: auto; aspect-ratio: 560 / 315;" data-ratio="1.7777777777777777"></iframe>
+        <h2>UN-FROZEN LT会-03</h2>
+        <h3>C++はじめたよ</h3>
+        <div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
+   padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+   border-radius: 8px; will-change: transform;">
+    <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+      src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFwTsZPaNs&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+    </iframe>
+  </div>
+  <a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFwTsZPaNs&#x2F;view?utm_content=DAFwTsZPaNs&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener"></a>
    
-      <a href="https://note.com/fujiemon_tad/" target="_blank"><img src = "image/note-square.png" alt = "Noteのアイコンで，ふじえもんのNoteプロフィールへのリンクです．" class = "icon" ></a>
-      <a href="https://qiita.com/fujiemon" target="_blank"><img src = "image/qiita-favicon.png" alt = "Qiitaのアイコンで，ふじえもんのQiitaプロフィールへのリンクです．" class = "icon" ></a>
-      <a href="https://zenn.dev/fujiengineer" target="_blank"><img src = "image/zenn.svg" alt = "Zennのアイコンで，ふじえもんのZennプロフィールへのリンクです．" class = "icon" ></a>
-      <a href="https://github.com/shotafujie" target="_blank" aria-label="Githubのアイコンで，ふじえもんのGithubプロフィールへのリンクです．"<i class="fab fa-github icon"></i></a>
-    </div>
-    </div>
-  </footer>
+      </div>
+    </main>
+    <footer>
+      <div id="footer-nav">
+        <p>連絡先: <a href="mailto:fujieng1nee7@gmail.com">fujieng1nee7[a]gmail.com </a><br>[a]は@と読み替えてください．</p>
+      <div class="social-icons">
+        <a href="https://twitter.com/fujiengineer"><img src="image/x-logo-black.png" alt="Xのアイコンで，ふじえもんのXプロフィールへのリンクです．" class="icon"></a>
+        <a href="https://note.com/fujiemon_tad/" target="_blank"><img src = "image/note-square.png" alt = "Noteのアイコンで，ふじえもんのNoteプロフィールへのリンクです．" class = "icon" ></a>
+        <a href="https://qiita.com/fujiemon" target="_blank"><img src = "image/qiita-favicon.png" alt = "Qiitaのアイコンで，ふじえもんのQiitaプロフィールへのリンクです．" class = "icon" ></a>
+        <a href="https://zenn.dev/fujiengineer" target="_blank"><img src = "image/zenn.svg" alt = "Zennのアイコンで，ふじえもんのZennプロフィールへのリンクです．" class = "icon" ></a>
+        <a href="https://github.com/shotafujie" target="_blank" aria-label="Githubのアイコンで，ふじえもんのGithubプロフィールへのリンクです．"<i class="fab fa-github icon"></i></a>
+      </div>
+      </div>
+    </footer>
   </div>
 </body>
 </html>
