--- a/hobbies.html
+++ b/hobbies.html
@@ -25,56 +25,54 @@
 
 <body>
   <div id="main-container">
-  <header>
-    <div id="top-nav">
-      <h1>ふじえもん
-      <img src="image/fujiemon-white.png" alt="プロフィールアイコン" class="icon">
-      </h1>
-      <p>骨伝導で補聴している学生エンジニア．音に関するプロダクト開発や研究をしています．UN-FROZEN, デフエンジニアの会に所属しています．</p>
-      <br>
-      <p>骨伝導, チーム開発におけるコミュニケーション, 聴覚障害に関する情報保障に興味があります．</p>
-      <nav>
+    <header>
+      <div id="top-nav">
+        <h1>ふじえもん
+        <img src="image/fujiemon-white.png" alt="プロフィールアイコン" class="icon">
+        </h1>
+        <p>骨伝導で補聴している学生エンジニア．音に関するプロダクト開発や研究をしています．UN-FROZEN, デフエンジニアの会に所属しています．</p>
+        <br>
+        <p>骨伝導, チーム開発におけるコミュニケーション, 聴覚障害に関する情報保障に興味があります．</p>
+        <nav>
+          <ul>
+            <li><a href="index.html">ホーム</a></li>
+            <li><a href="index.html#section1">ポートフォリオ</a></li>
+            <li><a href="slides.html">登壇資料</a></li>
+            <li><a href="hobbies.html">趣味</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>  
+    <main>
+      <div id="hobbies">
+        <h1>趣味</h1>
+  
         <ul>
-          <li><a href="index.html">ホーム</a></li>
-          <li><a href="index.html#section1">ポートフォリオ</a></li>
-          <li><a href="slides.html">登壇資料</a></li>
-          <li><a href="hobbies.html">趣味</a></li>
+          <li>読書
+            <p>技術書は勿論，数学やサイバー犯罪を扱った小説をよく読みます．
+            </p>
+          </li>
+          <li>日本酒
+            <p>田酒，
+            </p>
+          </li>
         </ul>
-      </nav>
-    </div>
-  </header>  
-  <main>
-    <div id="hobbies">
-      <h1>趣味</h1>
-
-      <ul>
-        <li>読書
-          <p>技術書は勿論，数学やサイバー犯罪を扱った小説をよく読みます．
-          </p>
-        </li>
-        <li>日本酒
-          <p>田酒，
-          </p>
-        </li>
-      </ul>
-
-      
-    </div>
-  </main>
-
-  <footer>
-    <div id="footer-nav">
-      <p>連絡先: <a href="mailto:fujieng1nee7@gmail.com">fujieng1nee7[a]gmail.com </a><br>[a]は@と読み替えてください．</p>
-    <div class="social-icons">
-      <a href="https://twitter.com/fujiengineer"><img src="image/x-logo-white.png" alt="Xのアイコンで，ふじえもんのXプロフィールへのリンクです．" class="icon"></a>
-   
-      <a href="https://note.com/fujiemon_tad/" target="_blank"><img src = "image/note-square.png" alt = "Noteのアイコンで，ふじえもんのNoteプロフィールへのリンクです．" class = "icon" ></a>
-      <a href="https://qiita.com/fujiemon" target="_blank"><img src = "image/qiita-favicon.png" alt = "Qiitaのアイコンで，ふじえもんのQiitaプロフィールへのリンクです．" class = "icon" ></a>
-      <a href="https://zenn.dev/fujiengineer" target="_blank"><img src = "image/zenn.svg" alt = "Zennのアイコンで，ふじえもんのZennプロフィールへのリンクです．" class = "icon" ></a>
-      <a href="https://github.com/shotafujie" target="_blank" aria-label="Githubのアイコンで，ふじえもんのGithubプロフィールへのリンクです．"<i class="fab fa-github icon"></i></a>
-    </div>
-    </div>
-  </footer>
+  
+        
+      </div>
+    </main>
+    <footer>
+      <div id="footer-nav">
+        <p>連絡先: <a href="mailto:fujieng1nee7@gmail.com">fujieng1nee7[a]gmail.com </a><br>[a]は@と読み替えてください．</p>
+      <div class="social-icons">
+        <a href="https://twitter.com/fujiengineer"><img src="image/x-logo-black.png" alt="Xのアイコンで，ふじえもんのXプロフィールへのリンクです．" class="icon"></a>
+        <a href="https://note.com/fujiemon_tad/" target="_blank"><img src = "image/note-square.png" alt = "Noteのアイコンで，ふじえもんのNoteプロフィールへのリンクです．" class = "icon" ></a>
+        <a href="https://qiita.com/fujiemon" target="_blank"><img src = "image/qiita-favicon.png" alt = "Qiitaのアイコンで，ふじえもんのQiitaプロフィールへのリンクです．" class = "icon" ></a>
+        <a href="https://zenn.dev/fujiengineer" target="_blank"><img src = "image/zenn.svg" alt = "Zennのアイコンで，ふじえもんのZennプロフィールへのリンクです．" class = "icon" ></a>
+        <a href="https://github.com/shotafujie" target="_blank" aria-label="Githubのアイコンで，ふじえもんのGithubプロフィールへのリンクです．" class="fab fa-github icon"></a>
+      </div>
+      </div>
+    </footer>
   </div>
 </body>
 </html>
