--- a/hobbies.html
+++ b/hobbies.html
@@ -29,6 +29,7 @@
       <div id="top-nav">
         <h1>ふじえもん
         <img src="image/fujiemon-white.png" alt="プロフィールアイコン" class="icon">
+        <img src="image/fujiemon-gif.gif" alt="ふじえもんのアイコンのgifです" class="icon">
         </h1>
         <p>骨伝導で補聴している学生エンジニア．音に関するプロダクト開発や研究をしています．UN-FROZEN, デフエンジニアの会に所属しています．</p>
         <br>
