--- a/slides.html
+++ b/slides.html
@@ -31,9 +31,9 @@
         <img src="image/fujiemon-white.png" alt="プロフィールアイコン" class="icon">
         <img src="image/fujiemon-gif.gif" alt="ふじえもんのアイコンのgifです" class="icon">
         </h1>
-        <p>骨伝導で補聴している学生エンジニア．音に関するプロダクト開発や研究をしています．UN-FROZEN, デフエンジニアの会に所属しています．</p>
-        <br>
-        <p>骨伝導, チーム開発におけるコミュニケーション, 聴覚障害に関する情報保障に興味があります．</p>
+        <p>骨伝導で補聴している学生エンジニア．音に関するプロダクト開発や研究をしています．UN-FROZEN, デフエンジニアの会に所属しています．聴こえに関係なく発言できる、伝わる環境づくりのために試行錯誤中です．
+        </p>
+        <p>骨伝導, チーム開発におけるコミュニケーション, 音背認識，　音源分離，　聴覚障害に関する情報保障，　日本酒に興味があります．</p>
         <nav>
           <ul>
             <li><a href="index.html">ホーム</a></li>
@@ -51,12 +51,12 @@
             <h3>大学での講義(AgileMiniCamp)の中で行ったチームでのコミュニケーションの工夫について話しました．</h3>
             <a href = "https://confengine.com/conferences/regional-scrum-gathering-tokyo-2023/proposal/17568">RSGT2023のProposal-聴覚障害のある大学生チームによる臆さない発言環境の形成</a>
             <br>
-            <a href = "https://speakerdeck.com/hayato_ukuk/zi-mu-ting-jue-zhang-hai-noaruda-xue-sheng-timuniyoruyi-sanaifa-yan-huan-jing-noxing-cheng">RSGT2023 聴覚障害のある大学生チームによる臆さない発言環境の形成  スライド-字幕付き</a><iframe class="speakerdeck-iframe" frameborder="0" src="https://speakerdeck.com/player/1556ba2a59ca4399969837a550d0f3b2" title="字幕_聴覚障害のある大学生チームによる臆さない発言環境の形成" allowfullscreen="true" data-ratio="1.78343949044586"></iframe>
+            <a href = "https://speakerdeck.com/hayato_ukuk/zi-mu-ting-jue-zhang-hai-noaruda-xue-sheng-timuniyoruyi-sanaifa-yan-huan-jing-noxing-cheng">RSGT2023 聴覚障害のある大学生チームによる臆さない発言環境の形成  スライド-字幕付き</a><iframe class="speakerdeck-iframe" src="https://speakerdeck.com/player/1556ba2a59ca4399969837a550d0f3b2" title="字幕_聴覚障害のある大学生チームによる臆さない発言環境の形成" allow="fullscreen" data-ratio="1.78343949044586"></iframe>
             <br>
-            <a href = "https://speakerdeck.com/hayato_ukuk/ting-jue-zhang-hai-noaruda-xue-sheng-timuniyoruyi-sanaifa-yan-huan-jing-noxing-cheng">RSGT2023 聴覚障害のある大学生チームによる臆さない発言環境の形成  スライド</a><iframe class="speakerdeck-iframe" frameborder="0" src="https://speakerdeck.com/player/b823a53c983747b6ad90d237d1465aef" title="聴覚障害のある大学生チームによる臆さない発言環境の形成" allow="fullscreen" data-ratio="1.78343949044586"></iframe>
+            <a href = "https://speakerdeck.com/hayato_ukuk/ting-jue-zhang-hai-noaruda-xue-sheng-timuniyoruyi-sanaifa-yan-huan-jing-noxing-cheng">RSGT2023 聴覚障害のある大学生チームによる臆さない発言環境の形成  スライド</a><iframe class="speakerdeck-iframe" src="https://speakerdeck.com/player/b823a53c983747b6ad90d237d1465aef" title="聴覚障害のある大学生チームによる臆さない発言環境の形成" allow="fullscreen" data-ratio="1.78343949044586"></iframe>
           <h2>スクフェス福岡</h2>
             <h3>スクフェス福岡にてオンラインで登壇しました．</h3>
-            <a href ="https://speakerdeck.com/fujiemon/ting-koeniyi-razu-waiwaifa-yan-situtugasigasikai-fa-suru-tamenibi-yao-nakoto-sukuhuesufu-gang">聴こえに依らずワイワイ発言しつつガシガシ開発するために必要なこと-スクフェス福岡</a><iframe class="speakerdeck-iframe" frameborder="0" src="https://speakerdeck.com/player/ab7d73836cfc41bc8cf384963a265b0d" title="聴こえに依らず_ワイワイ発言しつつガシガシ開発する_ために必要なこと-スクフェス福岡.pdf" allow="fullscreen" data-ratio="1.7777777777777777"></iframe>
+            <a href ="https://speakerdeck.com/fujiemon/ting-koeniyi-razu-waiwaifa-yan-situtugasigasikai-fa-suru-tamenibi-yao-nakoto-sukuhuesufu-gang">聴こえに依らずワイワイ発言しつつガシガシ開発するために必要なこと-スクフェス福岡</a><iframe class="speakerdeck-iframe" src="https://speakerdeck.com/player/ab7d73836cfc41bc8cf384963a265b0d" title="聴こえに依らず_ワイワイ発言しつつガシガシ開発する_ために必要なこと-スクフェス福岡.pdf" allow="fullscreen" data-ratio="1.7777777777777777"></iframe>
         <h2>UN-FROZEN LT会-03</h2>
         <h3>C++はじめたよ</h3>
         <div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
