--- a/hobbies.html
+++ b/hobbies.html
@@ -21,19 +21,23 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
 </head>
 
 <body>
   <div id="main-container">
     <header>
-      <div id="top-nav">
+      <div id="header-nav">
         <h1>ふじえもん
         <img src="image/fujiemon-white.png" alt="プロフィールアイコン" class="icon">
         <img src="image/fujiemon-gif.gif" alt="ふじえもんのアイコンのgifです" class="icon">
         </h1>
-        <p>骨伝導で補聴している学生エンジニア．音に関するプロダクト開発や研究をしています．UN-FROZEN, デフエンジニアの会に所属しています．聴こえに関係なく発言できる、伝わる環境づくりのために試行錯誤中です．
+        <p>
+          骨伝導で補聴している学生エンジニア．音に関するプロダクト開発や研究をしています．<br>
+          UN-FROZEN, デフエンジニアの会に所属しています．<br>
+          聴こえに関係なく発言できる、伝わる環境づくりのために試行錯誤中です．
         </p>
-        <p>骨伝導, チーム開発におけるコミュニケーション, 音背認識，　音源分離，　聴覚障害に関する情報保障，　日本酒に興味があります．</p>
+        <p>骨伝導, チーム開発におけるコミュニケーション, 音声認識, 音源分離, 聴覚障害に関する情報保障, 日本酒に興味があります．</p>
         <nav>
           <ul>
             <li><a href="index.html">ホーム</a></li>
@@ -47,20 +51,10 @@
     <main>
       <div id="hobbies">
         <h1>趣味</h1>
-  
-        <ul>
-          <li>読書
-            <p>技術書は勿論，数学やサイバー犯罪を扱った小説をよく読みます．
-            </p>
-          </li>
-          <li>日本酒
-            <p>田酒，
-            </p>
-          </li>
-        </ul>
-  
-        
-      </div>
+          <ul>
+            <li>読書</li>
+            <li>日本酒</li>
+          </ul>
     </main>
     <footer>
       <div id="footer-nav">
