--- a/slides.html
+++ b/slides.html
@@ -26,14 +26,17 @@
 <body>
   <div id="main-container">
     <header>
-      <div id="top-nav">
+      <div id="header-nav">
         <h1>ふじえもん
         <img src="image/fujiemon-white.png" alt="プロフィールアイコン" class="icon">
         <img src="image/fujiemon-gif.gif" alt="ふじえもんのアイコンのgifです" class="icon">
         </h1>
-        <p>骨伝導で補聴している学生エンジニア．音に関するプロダクト開発や研究をしています．UN-FROZEN, デフエンジニアの会に所属しています．聴こえに関係なく発言できる、伝わる環境づくりのために試行錯誤中です．
+        <p>
+          骨伝導で補聴している学生エンジニア．音に関するプロダクト開発や研究をしています．<br>
+          UN-FROZEN, デフエンジニアの会に所属しています．<br>
+          聴こえに関係なく発言できる、伝わる環境づくりのために試行錯誤中です．
         </p>
-        <p>骨伝導, チーム開発におけるコミュニケーション, 音背認識，　音源分離，　聴覚障害に関する情報保障，　日本酒に興味があります．</p>
+        <p>骨伝導, チーム開発におけるコミュニケーション, 音声認識, 音源分離, 聴覚障害に関する情報保障, 日本酒に興味があります．</p>
         <nav>
           <ul>
             <li><a href="index.html">ホーム</a></li>
