add my hobbies, change color

--- a/hobbies.html
+++ b/hobbies.html
@@ -54,7 +54,49 @@
         <h1>趣味</h1>
           <ul>
             <li>読書</li>
+              <table border="1">
+                <tr>
+                  <th>書名</th><th>ふじえもんの一言</th>
+                </tr>
+                <tr>
+                  <td>Dr.STONE</td>
+                  <td>26巻+3話と短すぎず長すぎず．科学に興味を持ったら読むとさらにワクワクが掻き立てられる楽しい漫画．2023年時点で最高に結末に納得できた作品でした．</td>
+                </tr>
+                <tr>
+                  <td>浜村渚の計算ノート</td>
+                  <td>中学時代から読んでいる，数学が好きな少女のお話．最近出た９巻目も必見です．(まだ読みかけ)</td></tr>
+                <!-- <tr><td></td><td></td></tr> -->
+              </table>
+            <br>
             <li>日本酒</li>
+              <table border="1">
+                <tr>
+                  <th>銘柄</th><th>ふじえもんの一言</th>
+                </tr>
+                <tr>
+                  <td>八仙　ピンクラベル吟醸</td>
+                  <td>最初に呑んだ日本酒．</td></tr>
+                <tr>
+                  <td>田酒</td>
+                  <td>何か良いことがあったとき，季節の変わり目に気合いを入れるために飲む地酒．</td></tr>
+                <!-- <tr><td></td><td></td></tr> -->
+              </table>
+            <br>
+            <li>デバイス・ツール</li>
+              <table border="1">
+                <tr>
+                  <th>品名or型番</th><th>ふじえもんの一言</th>                  </tr>
+                <tr>
+                  <td>DELLU2723QX</td>
+                  <td>27インチの4Kモニター．発色にこだわって選びました．豊富なインターフェースがポイント．スピーカーが無いけどイヤホンを使っているので問題無し．</td>
+                </tr>
+                <tr>
+                  <td>HHKB Professional HYBRID Type-S 雪</td>
+                  <td>ハッカー憧れ(?)のキーボード⌨️．打鍵感やコンパクトな配列がお気に入りです．</td>
+                </tr>
+                <!-- <tr><td></td><td></td></tr> -->
+              </table>
+
           </ul>
     </main>
     <footer>
