--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <div id="content">
       <div id="section1">
-        <h1>ポートフォリオ</h1>
+        <h1>つくったもの</h1>
         <div class="portfolio-card-container">
           <div class="card">
             <img src="image/bgBWs.png" alt="BlowWords" class="card-image">
@@ -90,6 +90,7 @@
                 <br>
                 経験したことや学びは<a href = "https://note.com/fujiemon_tad/n/n244aa6e76df5">こちらのnote記事「経験備忘録_チーム開発_2022年」</a>で書きました．
               </p>
+              <iframe class="note-embed" src="https://note.com/embed/notes/n244aa6e76df5" style="border: 0; display: block; max-width: 99%; width: 494px; padding: 0px; margin: 10px 0px; position: static; visibility: visible;" height="400"></iframe><script async src="https://note.com/scripts/embed.js" charset="utf-8"></script>
             </li>
             <li>特別研究でPythonを主に使用しています．
               <p>音声認識,音源分離に関するテーマで，実験結果の検定でも用いました．
