--- a/template.html
+++ b/template.html
@@ -33,11 +33,13 @@
         <img src="image/fujiemon-gif.gif" alt="ふじえもんのアイコンのgifです" class="icon">
         </h1>
         <p>
-          骨伝導で補聴している学生エンジニア．音に関するプロダクト開発や研究をしています．<br>
-          UN-FROZEN, デフエンジニアの会に所属しています．<br>
-          聴こえに関係なく発言できる、伝わる環境づくりのために試行錯誤中です．
+          ふじえもんのおへやへようこそ．
+          骨伝導で補聴している学生エンジニア．<br>
+          音に関するプロダクト開発や研究．<br>
+          所属:筑波技術大学(2020.03~)，UN-FROZEN，デフエンジニアの会<br>
+          聴こえに関係なく発言できる、伝わる環境づくりのために試行錯誤中．
         </p>
-        <p>骨伝導, チーム開発におけるコミュニケーション, 音声認識, 音源分離, 聴覚障害に関する情報保障, 日本酒に興味があります．</p>
+        <p>#骨伝導 #チーム開発におけるコミュニケーション #音声認識　#音源分離 #聴覚障害に関する情報保障 #日本酒</p>
         <nav>
           <ul>
             <li><a href="index.html">ホーム</a></li>
