--- a/template.html
+++ b/template.html
@@ -34,7 +34,7 @@
         </h1>
         <p>
           ふじえもんのおへやへようこそ．
-          骨伝導で補聴している学生エンジニア．<br>
+          骨伝導で補聴している難聴者でエンジニア．<br>
           音に関するプロダクト開発や研究．<br>
           所属:筑波技術大学(2020.03~)，UN-FROZEN，デフエンジニアの会<br>
           聴こえに関係なく発言できる、伝わる環境づくりのために試行錯誤中．
