--- a/slides.html
+++ b/slides.html
@@ -32,7 +32,7 @@
         <img src="image/fujiemon-gif.gif" alt="ふじえもんのアイコンのgifです" class="icon">
         </h1>
         <p>
-          ふじえもんのおへやへようこそ．
+          ふじえもんのおへやへようこそ．<br>
           骨伝導で補聴している難聴者でエンジニア．<br>
           音に関するプロダクト開発や研究．<br>
           所属:筑波技術大学(2020.03~)，UN-FROZEN，デフエンジニアの会<br>
