--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <div class="card">
             <img src="image/bgBWs.png" alt="BlowWords" class="card-image">
             <div class="card-content">
-              <h2 class="card-title"><a href = "https://blowwords.fujieshota.repl.co/">BlowWords</a><img src="image/iconblowwords724.png" alt="BlowWordsのアイコン" class="icon"></h2>
+              <h2 class="card-title"><a href = "https://blowwords.replit.app/">BlowWords</a><img src="image/iconblowwords724.png" alt="BlowWordsのアイコン" class="icon"></h2>
               <p class="card-description">あなたの声をシャボン玉のように浮かぶ文字として表示します．</p>
             </div>
           </div>
