add slide of longltmtg

--- a/slides.html
+++ b/slides.html
@@ -62,18 +62,20 @@
           <h2>スクフェス福岡</h2>
             <h3>スクフェス福岡にてオンラインで登壇しました．</h3>
             <a href ="https://speakerdeck.com/fujiemon/ting-koeniyi-razu-waiwaifa-yan-situtugasigasikai-fa-suru-tamenibi-yao-nakoto-sukuhuesufu-gang">聴こえに依らずワイワイ発言しつつガシガシ開発するために必要なこと-スクフェス福岡</a><iframe class="speakerdeck-iframe" src="https://speakerdeck.com/player/ab7d73836cfc41bc8cf384963a265b0d" title="聴こえに依らず_ワイワイ発言しつつガシガシ開発する_ために必要なこと-スクフェス福岡.pdf" allow="fullscreen" data-ratio="1.7777777777777777"></iframe>
-        <h2>UN-FROZEN LT会-03</h2>
-        <h3>C++はじめたよ</h3>
-        <div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
-   padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
-   border-radius: 8px; will-change: transform;">
-    <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
-      src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFwTsZPaNs&#x2F;view?embed" allow="fullscreen">
-    </iframe>
-  </div>
-  <a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFwTsZPaNs&#x2F;view?utm_content=DAFwTsZPaNs&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener"></a>
-   
-      </div>
+          <h2>UN-FROZEN LT会-03</h2>
+          <h3>C++はじめたよ</h3>
+          <div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
+     padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+     border-radius: 8px; will-change: transform;">
+      <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+        src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFwTsZPaNs&#x2F;view?embed" allow="fullscreen">
+      </iframe>
+    </div>
+    <a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFwTsZPaNs&#x2F;view?utm_content=DAFwTsZPaNs&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener"></a>
+    </div>
+          <h2>開発サークルUN-FROZEN　LongなLT会</h2>
+            <h3>2024-02-19に30分でLTしました．</h3>
+            <a href ="https://speakerdeck.com/fujiemon/ting-jue-zhang-hai-toyin-sheng-qing-bao-chu-li">聴覚障害と音声情報処理</a><iframe class="speakerdeck-iframe" frameborder="0" src="https://speakerdeck.com/player/058d1018a99e48ff973f46ca10aff3b3" title="聴覚障害と音声情報処理" allowfullscreen="true" style="border: 0px; background: padding-box padding-box rgba(0, 0, 0, 0.1); margin: 0px; padding: 0px; border-radius: 6px; box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 40px; width: 100%; height: auto; aspect-ratio: 560 / 315;" data-ratio="1.7777777777777777"></iframe>
     </main>
     <footer>
       <div id="footer-nav">
