--- a/slides.html
+++ b/slides.html
@@ -76,6 +76,7 @@
           <h2>開発サークルUN-FROZEN　LongなLT会</h2>
             <h3>2024-02-19に30分でLTしました．</h3>
             <a href ="https://speakerdeck.com/fujiemon/ting-jue-zhang-hai-toyin-sheng-qing-bao-chu-li">聴覚障害と音声情報処理</a><iframe class="speakerdeck-iframe" frameborder="0" src="https://speakerdeck.com/player/058d1018a99e48ff973f46ca10aff3b3" title="聴覚障害と音声情報処理" allowfullscreen="true" style="border: 0px; background: padding-box padding-box rgba(0, 0, 0, 0.1); margin: 0px; padding: 0px; border-radius: 6px; box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 40px; width: 100%; height: auto; aspect-ratio: 560 / 315;" data-ratio="1.7777777777777777"></iframe>
+  </div>
     </main>
     <footer>
       <div id="footer-nav">
