update contents about research, slide.

--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
         </h1>
         <p>
           ふじえもんのおへやへようこそ．<br>
-          骨伝導で補聴している難聴者でエンジニア．<br>
-          音に関するプロダクト開発や研究．<br>
-          所属:筑波技術大学(2020.03~)，UN-FROZEN，デフエンジニアの会<br>
+          骨伝導で補聴している難聴者です．<br>
+          エンジニアとして音に関するプロダクト開発や研究とか．<br>
+          所属:筑波技術大学産業技術学部(2020.04~2024-03)，UN-FROZEN(筑波技術大学開発サークル)，デフエンジニアの会<br>
           聴こえに関係なく発言できる、伝わる環境づくりのために試行錯誤中．
         </p>
-        <p>#骨伝導 #チーム開発におけるコミュニケーション #音声認識　#音源分離 #聴覚障害に関する情報保障 #日本酒</p>
+        <p>#骨伝導 #チーム開発におけるコミュニケーション #音声認識 #音源分離 #聴覚障害に関する情報保障 #日本酒</p>
         <nav>
           <ul>
             <li><a href="index.html">ホーム</a></li>
@@ -54,6 +54,7 @@
     <div id="content">
       <div id="section1">
         <h1>ポートフォリオ</h1>
+        <h2>2024-03-23現在はBlowWordsのみ(デプロイの都合上)遊ぶことができます．</h2>
         <div class="portfolio-card-container">
           <div class="card">
             <img src="image/bgBWs.png" alt="BlowWords" class="card-image">
@@ -82,7 +83,7 @@
       </div>
 
       <div id="section3">
-        <h1>スキル・開発経験</h1>
+        <h1>実績</h1>
           <ul>
             <li>技育CAMPに2回参加しました</li>
             <li><a href = "https://nposw.org/tsukuba230203/">StartupWeekendTsukubaにて優勝しました</a></li>
@@ -101,11 +102,19 @@
 
 
             </li>
-            <!-- <li>Ruby on Rails</li>
-              <li>システム開発</li> -->
-            <li>HTML,CSSを使ったホームページ作成
+            <li>Ruby on Railsを使った実務経験
+              <p>(社会人&学生向け)相談予約システムの開発<a href = "https://tsukutech-social.net/site/schedule_reservation/">聴覚障害者を対象とした相談予約システム</a>のホームページです．</p>
+            </li>
+              <li>HTML,CSSを使ったホームページ作成
               <p>所属する開発サークル<a href = "https://un-frozen.jp/">UN-FROZEN</a>のホームページです．</p>
               <p>所属する大学の学園祭<a href = "https://tenryusai2023.com/">天龍祭2023</a>のホームページです．</p>
+            </li>
+            <li>研究
+              <p>藤江匠汰, & 渡辺知恵美. (2023). ろう・難聴者と聴者のグループ対話における理解度・参加度の高いコミュニケーションストラテジー. 研究報告アクセシビリティ (AAC), 2023(7), 1-8.<a href="https://ipsj.ixsq.nii.ac.jp/ej/index.php?active_action=repository_view_main_item_detail&page_id=13&block_id=8&item_id=231333&item_no=1">情報処理学会電子図書館</a></p>
+              <p>混合音声から抽出した難聴者の発話の聞き取りやすさに関する客観的および主観的な評価による検討,藤江 匠汰，安 啓一（筑波技術大），小林 彰夫（大和大）(後日更新します)</p>
+            </li>
+            <li>その他表彰など
+              <p>成績優秀や学外での取り組みが評価され学長賞をいただきました．<a href = "https://www.tsukuba-tech.ac.jp/topics/2024/03/22001244.html">筑波技術大学ホームページ-令和5年度筑波技術大学学位記授与式を挙行</a></p>
             </li>
           </ul>
 
