--- a/slides.html
+++ b/slides.html
@@ -33,9 +33,9 @@
         </h1>
         <p>
           ふじえもんのおへやへようこそ．<br>
-          骨伝導で補聴している難聴者でエンジニア．<br>
-          音に関するプロダクト開発や研究．<br>
-          所属:筑波技術大学(2020.03~)，UN-FROZEN，デフエンジニアの会<br>
+          骨伝導で補聴している難聴者です．<br>
+          エンジニアとして音に関するプロダクト開発や研究とか．<br>
+          所属:筑波技術大学産業技術学部(2020.04~2024-03)，UN-FROZEN(筑波技術大学開発サークル)，デフエンジニアの会<br>
           聴こえに関係なく発言できる、伝わる環境づくりのために試行錯誤中．
         </p>
         <p>#骨伝導 #チーム開発におけるコミュニケーション #音声認識　#音源分離 #聴覚障害に関する情報保障 #日本酒</p>
@@ -75,7 +75,9 @@
           <h2>開発サークルUN-FROZEN　LongなLT会</h2>
             <h3>2024-02-19に30分でLTしました．</h3>
             <a href ="https://speakerdeck.com/fujiemon/ting-jue-zhang-hai-toyin-sheng-qing-bao-chu-li">聴覚障害と音声情報処理</a><iframe class="speakerdeck-iframe" frameborder="0" src="https://speakerdeck.com/player/058d1018a99e48ff973f46ca10aff3b3" title="聴覚障害と音声情報処理" allowfullscreen="true" style="border: 0px; background: padding-box padding-box rgba(0, 0, 0, 0.1); margin: 0px; padding: 0px; border-radius: 6px; box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 40px; width: 100%; height: auto; aspect-ratio: 560 / 315;" data-ratio="1.7777777777777777"></iframe>
-      
+          <h2>AgilePBL祭り2024</h2>
+            <h3>学生としてRSGT2024に参加して得られた学び</h3>
+            <iframe class="speakerdeck-iframe" frameborder="0" src="https://speakerdeck.com/player/608cdc1acc7a43efa0f886ecaa7eba31" title="学生としてRSGT2024に参加して得られた学び / Lessons learned from participating in RSGT2024 as a student" allowfullscreen="true" style="border: 0px; background: padding-box padding-box rgba(0, 0, 0, 0.1); margin: 0px; padding: 0px; border-radius: 6px; box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 40px; width: 100%; height: auto; aspect-ratio: 560 / 315;" data-ratio="1.7777777777777777"></iframe>
       </div>
          
     </main>
