--- a/template.html
+++ b/template.html
@@ -34,9 +34,9 @@
         </h1>
         <p>
           ふじえもんのおへやへようこそ．<br>
-          骨伝導で補聴している難聴者でエンジニア．<br>
-          音に関するプロダクト開発や研究．<br>
-          所属:筑波技術大学(2020.03~)，UN-FROZEN，デフエンジニアの会<br>
+          骨伝導で補聴している難聴者です．<br>
+          エンジニアとして音に関するプロダクト開発や研究とか．<br>
+          所属:筑波技術大学産業技術学部(2020.04~2024-03)，UN-FROZEN(筑波技術大学開発サークル)，デフエンジニアの会<br>
           聴こえに関係なく発言できる、伝わる環境づくりのために試行錯誤中．
         </p>
         <p>#骨伝導 #チーム開発におけるコミュニケーション #音声認識　#音源分離 #聴覚障害に関する情報保障 #日本酒</p>
@@ -52,7 +52,7 @@
     </header>
 
     <div id="content">
-
+      <h2>まだなにもないよ～</h2>
 
     </div>
 
