add award of 2024-aac-024.

--- a/hobbies.html
+++ b/hobbies.html
@@ -36,10 +36,10 @@
           ふじえもんのおへやへようこそ．<br>
           骨伝導で補聴している難聴者です．<br>
           エンジニアとして音に関するプロダクト開発や研究とか．<br>
-          所属:筑波技術大学産業技術学部(2020.04~2024-03)，UN-FROZEN(筑波技術大学開発サークル)，デフエンジニアの会<br>
+          所属:筑波技術大学産業技術学部(2020-04~2024-03)，UN-FROZEN(筑波技術大学開発サークル)，デフエンジニアの会<br>
           聴こえに関係なく発言できる、伝わる環境づくりのために試行錯誤中．
         </p>
-        <p>#骨伝導 #チーム開発におけるコミュニケーション #音声認識　#音源分離 #聴覚障害に関する情報保障 #日本酒</p>
+        <p>#骨伝導 #チーム開発におけるコミュニケーション #音声認識 #音源分離 #聴覚障害に関する情報保障 #日本酒</p>
         <nav>
           <ul>
             <li><a href="index.html">ホーム</a></li>
