--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           ふじえもんのおへやへようこそ．<br>
           骨伝導で補聴している難聴者です．<br>
           エンジニアとして音に関するプロダクト開発や研究とか．<br>
-          所属:筑波技術大学産業技術学部(2020.04~2024-03)，UN-FROZEN(筑波技術大学開発サークル)，デフエンジニアの会<br>
+          所属:筑波技術大学産業技術学部(2020-04~2024-03)，UN-FROZEN(筑波技術大学開発サークル)，デフエンジニアの会<br>
           聴こえに関係なく発言できる、伝わる環境づくりのために試行錯誤中．
         </p>
         <p>#骨伝導 #チーム開発におけるコミュニケーション #音声認識 #音源分離 #聴覚障害に関する情報保障 #日本酒</p>
@@ -106,15 +106,16 @@
               <p>(社会人&学生向け)相談予約システムの開発<a href = "https://tsukutech-social.net/site/schedule_reservation/">聴覚障害者を対象とした相談予約システム</a>のホームページです．</p>
             </li>
               <li>HTML,CSSを使ったホームページ作成
-              <p>所属する開発サークル<a href = "https://un-frozen.jp/">UN-FROZEN</a>のホームページです．</p>
-              <p>所属する大学の学園祭<a href = "https://tenryusai2023.com/">天龍祭2023</a>のホームページです．</p>
+              <p>筑波技術大学開発サークル<a href = "https://un-frozen.jp/">UN-FROZEN</a>のホームページ．</p>
+              <p>筑波技術大学の学園祭<a href = "https://tenryusai2023.com/">天龍祭2023</a>のホームページ．</p>
             </li>
             <li>研究
-              <p>藤江匠汰, & 渡辺知恵美. (2023). ろう・難聴者と聴者のグループ対話における理解度・参加度の高いコミュニケーションストラテジー. 研究報告アクセシビリティ (AAC), 2023(7), 1-8.<a href="https://ipsj.ixsq.nii.ac.jp/ej/index.php?active_action=repository_view_main_item_detail&page_id=13&block_id=8&item_id=231333&item_no=1">情報処理学会電子図書館</a></p>
-              <p>混合音声から抽出した難聴者の発話の聞き取りやすさに関する客観的および主観的な評価による検討,藤江 匠汰，安 啓一（筑波技術大），小林 彰夫（大和大）(後日更新します)</p>
+              <p>藤江匠汰, & 渡辺知恵美. (2023). ろう・難聴者と聴者のグループ対話における理解度・参加度の高いコミュニケーションストラテジー. 研究報告アクセシビリティ (AAC), 2023(7), 1-8.<a href="https://ipsj.ixsq.nii.ac.jp/ej/index.php?active_action=repository_view_main_item_detail&page_id=13&block_id=8&item_id=231333&item_no=1">情報学広場：情報処理学会電子図書館</a></p>
+              <p>藤江匠汰, & 安啓一, & 小林彰夫. (2024). 混合音声から抽出した難聴者の発話の聞き取りやすさに関する客観的および主観的な評価による検討. 研究報告アクセシビリティ (AAC), 2024(17), 1-6.<a href="https://ipsj.ixsq.nii.ac.jp/ej/?action=pages_view_main&active_action=repository_view_main_item_detail&item_id=233189&item_no=1&page_id=13&block_id=8">情報学広場：情報処理学会電子図書館</a></p>
             </li>
             <li>その他表彰など
               <p>成績優秀や学外での取り組みが評価され学長賞をいただきました．<a href = "https://www.tsukuba-tech.ac.jp/topics/2024/03/22001244.html">筑波技術大学ホームページ-令和5年度筑波技術大学学位記授与式を挙行</a></p>
+              <p>第24回アクセシビリティ研究会(2024-AAC-024)学生奨励賞 受賞 <a href="https://ipsj-aac.org/%e5%ad%a6%e7%94%9f%e5%a5%a8%e5%8a%b1%e8%b3%9e/">学生奨励賞 - 情報処理学会 アクセシビリティ研究会</a></p>
             </li>
           </ul>
 
